...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.rapidpro.surveyor.activity.OrgActivity">

    <LinearLayout
        android:id="@+id/container_pending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/pending_background"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible">

        <Button
            android:id="@+id/button_pending"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tertiary_button"
            android:minWidth="80dp"
            android:minHeight="0dp"
...
